cmake_minimum_required(VERSION 3.20)

set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 11)
project(namespace)
# add_executable(namespace const.cpp)
# add_executable(namespace 10_2_7_1_pythicalAndLogicalConst.cpp)
#  add_executable(namespace 10_2_7_2_mutable.cpp)
 add_executable(namespace 10_3_High_Efficient_UserDef.cpp)
