cmake_minimum_required(VERSION 3.20)

set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 11)
project(namespace)
# add_executable(namespace const.cpp)
# add_executable(namespace 10_2_7_1_pythicalAndLogicalConst.cpp)
# add_executable(namespace 10_2_7_2_mutable.cpp)
# add_executable(namespace 10_3_High_Efficient_UserDef.cpp)
# add_executable(namespace 10_3_1_Member_Function.cpp)
# add_executable(namespace 10_3_3_Assit_Function.cpp)
# add_executable(namespace 10_4_1_destructor.cpp)
# add_executable(namespace 10_4_4_LocalVarieble.cpp)
# add_executable(namespace 10_4_5_Free_Storage.cpp)
# add_executable(namespace 10_4_6_Class_Objects_As_Members.cpp)
# add_executable(namespace 10_4_7_array.cpp)
# add_executable(namespace 10_4_8_localStaticVar.cpp)
add_executable(namespace 10_4_10_TempObj.cpp)




 
